--- a/TODO.html
+++ b/TODO.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To-do-list</title>
-    <link rel="stylesheet" href="style/TODO.css" />
+    <link rel="stylesheet" href="TODO.css" />
   </head>
   <body>
     <div class="container">
@@ -21,6 +21,6 @@
       </div>
     </div>
 
-    <script src="java/TODO.js"></script>
+    <script src="TODO.js"></script>
   </body>
 </html>
